--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SecondsMeasuring</string>
+    <string name="text_time_text">00:00:000</string>
+    <string name="button_start_text">Start</string>
+    <string name="button_pause_text">Pause</string>
+    <string name="button_stop_text">Stop</string>
 </resources>
